[project]
name = "pytorch-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
